--- a/hw4.htm
+++ b/hw4.htm
@@ -1,10 +1,46 @@
-
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>一般神經科轉診系統</title>
+<script>
+  function checkForm() {
+    var x = document.getElementById("Fname").value ;
+    if (x==''||x.value=="null") 
+    {
+      alert("姓名必須填寫!");
+    }
+    var y = document.getElementById("telecom").value;
+    if(isNaN(y))
+      {
+       alert("電話必須為數字!");
+      }
+    }
+</script>
+<script>
+function myFunction() {
+var patient= {"name":"Chalmers", "telecom":12345678, "gender": "male", "birthDate": "1974-12-25"}; 
+document.getElementById("Fname").value=patient.name
+document.getElementById("telecom").value=patient.telecom
+document.getElementById("mygender").value=patient.gender
+document.getElementById("bday").value=patient.birthDate
+}
+ </script>
+<script>
+function myFunction1() {
+  var a = document.getElementById("Fname").value;
+  alert(a);
+  var b = document.getElementById("mygender").value;
+  alert(b);
+  var c = document.getElementById("telecom").value;
+  alert(c);
+  var d = document.getElementById("bday").value;
+  alert(d);
+}
+ </script>
 </head>
+<body>
 <h1>一般神經科轉診系統</h1>
   <style type="text/css">
 body {
@@ -15,29 +51,26 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 <font size="4"><b>病人基本資料:</b></font>
 <br>
 <form id="orderForm1" action="http://203.64.84.113/x/RQ_RS.aspx" method="post"  name="form1" >
-姓名: <input type="text" name="姓名">
+姓名: <input type="text" id="Fname" name="name" value="">
 性別:
-<input type="radio" name="性別" value="boy"> 男
-<input type="radio" name="性別" value="girl"> 女
+<input type="radio" id="mygender" name="gender" value="male" checked> 男
+<input type="radio" id="mygender" name="gender" value="women"> 女
 <br>
-身分證字號: <input type="text" name="身分證">  
+身分證字號: <input type="text" name="身分證字號" >  
 <br>
-聯絡電話: <input type="text" name="電話">
+聯絡電話: <input type="text" id="telecom" name="tele" value="">
 <br>
-聯絡地址:  <input type="text" name="地址">
+聯絡地址:  <input type="text" id="adress" name="地址" value="">
 <br>
-生日: <input type="text" name="生年">年 
-  <input type="text" name="生月">月
-  <input type="text" name="生日">日
+生日: <input type="text" id="bday" name="Birthday" value="">格式:1970-01-01
 <br>
 <br>
-
 <font size="4"><b>轉診基本資料:</b></font>
 <br>
-轉診自: <input type="text" clinic="科">&nbsp;科&nbsp;&nbsp;至一般神經科&nbsp;科<br>
-轉診日期: <input type="text" name="轉診年">年 
-  <input type="text" name="轉診月">月 
-  <input type="text" name="轉診日">日
+轉診自: <input type="text" id=clinic name="科" value="">&nbsp;科&nbsp;&nbsp;至一般神經科&nbsp;科<br>
+轉診日期: <input type="text" id=year name="轉診年" value="">年 
+  <input type="text" id="month" name="轉診月" value="">月 
+  <input type="text" id="day" name="轉診日" value="">日
 <br>
 轉診原因:<br>
 <textarea name="轉診原因";style="width:300px;height:100px;"></textarea>
@@ -53,8 +86,8 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 </select>
   <br>
   是否看過一般神經科:
-<input type="radio" name="是否看過一般神經科" value="是"> 是
-<input type="radio" name="是否看過一般神經科" value="否"> 否
+<input type="radio" name="是否看過一般神經科" value="yes"> 是
+<input type="radio" name="是否看過一般神經科" value="no"> 否
   &nbsp;&nbsp;&nbsp;醫生為: 
   <select name="醫生為">
   <option value="無">無</option>
@@ -64,7 +97,10 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="張四">張四</option>
 </select>
 <br>
-<input type="submit" value="送出資料">
+<button onclick="checkForm()" type="button">檢查資料</button>
+&nbsp;&nbsp;<input type="submit" value="送出資料">
+&nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
+&nbsp;&nbsp;<button onclick="myFunction1()" type="button">getPatient</button>
 </form>
 </body>
 </html> 
