--- a/hw4.htm
+++ b/hw4.htm
@@ -56,7 +56,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 <input type="radio" id="mygender" name="gender" value="male" checked> 男
 <input type="radio" id="mygender" name="gender" value="women"> 女
 <br>
-身分證字號: <input type="text" name="身分證字號" >  
+身分證字號: <input type="text" id="myid" name="身分證字號" >  
 <br>
 聯絡電話: <input type="text" id="telecom" name="tele" value="">
 <br>
@@ -97,6 +97,11 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="張四">張四</option>
 </select>
 <br>
+----------------------------------------------------------------
+<font size="4"><b>計算BMI:</b></font>
+身高: <input type="text" id="height" name="身高" value=""><br>
+體重: <input type="text" id=weight" name="體重" value=""><br>  
+BMI: <input type="text" id=BMI" name="結果" value=""><br>  
 <button onclick="checkForm()" type="button">檢查資料</button>
 &nbsp;&nbsp;<input type="submit" value="送出資料">
 &nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
