--- a/hw4.htm
+++ b/hw4.htm
@@ -98,7 +98,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 </select>
 <br>
 ----------------------------------------------------------------<br>
-<font size="4"><b>計算BMI:</b></font>
+<font size="4"><b>計算BMI:</b></font><br>
 身高: <input type="text" id="height" name="身高" value=""><br>
 體重: <input type="text" id=weight" name="體重" value=""><br>  
 BMI: <input type="text" id=BMI" name="結果" value=""><br>  
