--- a/hw4.htm
+++ b/hw4.htm
@@ -106,6 +106,7 @@ BMI: <input type="text" id=BMI" name="結果" value=""><br>
 &nbsp;&nbsp;<input type="submit" value="送出資料">
 &nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
 &nbsp;&nbsp;<button onclick="myFunction1()" type="button">getPatient</button>
+&nbsp;&nbsp;<button onclick="bmi()" type="button">計算BMI</button>
 </form>
 </body>
 </html> 
