--- a/hw4.htm
+++ b/hw4.htm
@@ -39,6 +39,14 @@ function myFunction1() {
   alert(d);
 }
  </script>
+<script>
+function mybmi() {
+  var hei = document.getElementById("height").value;
+  var wei = document.getElementById("weight").value;
+  var bmi= wei/(hei*hei);
+ document.getElementById("mybmi").value=bmi;
+}
+ </script>  
 </head>
 <body>
 <h1>一般神經科轉診系統</h1>
@@ -101,12 +109,12 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 <font size="4"><b>計算BMI:</b></font><br>
 身高: <input type="text" id="height" name="身高" value=""><br>
 體重: <input type="text" id=weight" name="體重" value=""><br>  
-BMI: <input type="text" id=BMI" name="結果" value=""><br>  
+BMI: <input type="text" id=mybmi" name="結果" value=""><br>  
 <button onclick="checkForm()" type="button">檢查資料</button>
 &nbsp;&nbsp;<input type="submit" value="送出資料">
 &nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
 &nbsp;&nbsp;<button onclick="myFunction1()" type="button">getPatient</button>
-&nbsp;&nbsp;<button onclick="bmi()" type="button">計算BMI</button>
+&nbsp;&nbsp;<button onclick="mybmi1()" type="button">計算BMI</button>
 </form>
 </body>
 </html> 
