--- a/hw4.htm
+++ b/hw4.htm
@@ -40,7 +40,7 @@ function myFunction1() {
 }
  </script>
 <script>
-function mybmi() {
+function mybmi1() {
   var hei = document.getElementById("height").value;
   var wei = document.getElementById("weight").value;
   var bmi= wei/(hei*hei);
