--- a/hw4.htm
+++ b/hw4.htm
@@ -43,8 +43,8 @@ function myFunction1() {
 function mybmi1() {
   var hei = document.getElementById("height").value;
   var wei = document.getElementById("weight").value;
-  var bmi= wei/(hei*hei);
- document.getElementById("mybmi").value=bmi;
+  var bmiresult= wei/(hei*hei);
+ document.getElementById("mybmi").value=bmiresult;
 }
  </script>  
 </head>
