--- a/hw4.htm
+++ b/hw4.htm
@@ -108,8 +108,8 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 <br>
 <font size="4"><b>計算BMI:</b></font><br>
 身高: <input type="text" id="height" name="身高" value=""><br>
-體重: <input type="text" id=weight" name="體重" value=""><br>  
-BMI: <input type="text" id=mybmi" name="結果" value=""><br>  
+體重: <input type="text" id=weight" name="體重" value=""><br> 
+結果: <input type="text" id=mybmi" name="結果" value=""><br>
 <button onclick="checkForm()" type="button">檢查資料</button>
 &nbsp;&nbsp;<input type="submit" value="送出資料">
 &nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
