--- a/hw4.htm
+++ b/hw4.htm
@@ -43,7 +43,7 @@ function myFunction1() {
 function mybmi1() {
   var hei = document.getElementById("height").value;
   var wei = document.getElementById("weight").value;
-  var bmiresult= (hei*hei)/wei;
+  var bmiresult= (hei*hei);
  document.getElementById("mybmi").value=bmiresult;
 }
  </script>  
