--- a/hw4.htm
+++ b/hw4.htm
@@ -100,7 +100,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
   <select name="醫生為">
   <option value="無">無</option>
   <option value="陳辰">陳辰</option>
-　<option value="李子">李子</option>
+　<option selected="true" value="李子">李子</option>
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
