--- a/hw4.htm
+++ b/hw4.htm
@@ -86,12 +86,10 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 病歷:<br>
 <textarea name="病例";style="width:300px;height:100px;"></textarea><br>
   隔離預防:
-    <select name="隔離預防">
-  <option value="none">無</option>
-  <option value="空氣傳播">空氣傳播</option>
-　<option value="接觸傳染">接觸傳染</option>
-　<option value="飛沫傳染">飛沫傳染</option>
-</select>
+  <input type="checkbox" name=prevent0" value="none"> 無<br>
+  <input type="checkbox" name="prevent1" value="air"> 空氣傳染<br>
+  <input type="checkbox" name="prevent2" value="contact"> 接觸傳染<br>
+  <input type="checkbox" name="prevent3" value="droplet" checked> 飛沫傳染<br><br>
   <br>
   是否看過一般神經科:
 <input type="radio" name="是否看過一般神經科" value="yes"> 是
@@ -116,5 +114,6 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 &nbsp;&nbsp;<button onclick="myFunction1()" type="button">getPatient</button>
 &nbsp;&nbsp;<button onclick="mybmi1()" type="button">計算BMI</button>
 </form>
+ 
 </body>
 </html> 
