--- a/hw4.htm
+++ b/hw4.htm
@@ -89,7 +89,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
   <input type="checkbox" name=prevent0" value="none"> 無
   <input type="checkbox" name="prevent1" value="air"> 空氣傳染
   <input type="checkbox" name="prevent2" value="contact"> 接觸傳染
-  <input type="checkbox" name="prevent3" value="droplet" checked> 飛沫傳染<br><br>
+  <input type="checkbox" name="prevent3" value="droplet" checked> 飛沫傳染<br>
   是否看過一般神經科:
 <input type="radio" name="是否看過一般神經科" value="yes"> 是
 <input type="radio" name="是否看過一般神經科" value="no"> 否
