--- a/hw4.htm
+++ b/hw4.htm
@@ -47,6 +47,11 @@ function mybmi1() {
  document.getElementById("mybmi").value=bmiresult;
 }
  </script>  
+<script>
+function mytable() {
+ 
+}
+ </script>  
 </head>
 <body>
 <h1>一般神經科轉診系統</h1>
@@ -112,6 +117,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 &nbsp;&nbsp;<button onclick="myFunction()" type="button">loadPatient</button>
 &nbsp;&nbsp;<button onclick="myFunction1()" type="button">getPatient</button>
 &nbsp;&nbsp;<button onclick="mybmi1()" type="button">計算BMI</button>
+&nbsp;&nbsp;<button onclick="mytable()" type="button">catchValue</button>
 </form>
  
 </body>
