--- a/hw4.htm
+++ b/hw4.htm
@@ -49,7 +49,7 @@ function mybmi1() {
  </script>  
 <script>
 function mytable() {
- 
+ var color
 }
  </script>  
 </head>
@@ -106,6 +106,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
+                   <table id="myTable"></table>
 <br>
 <br>
 <font size="4"><b>計算BMI:</b></font><br>
