--- a/hw4.htm
+++ b/hw4.htm
@@ -48,8 +48,17 @@ function mybmi1() {
 }
  </script>  
 <script>
+ var color=["Red","Green","Blue","Yellow","Black","Gray"];
 function mytable() {
- var color
+var table=document.getElementById("myTable");
+  for(i=0;i<colors.length;i++)
+  {
+      var row=table.insertRow(-1);
+      var c= row.insertCell(0);
+      c.insertHTML=colors[i];
+      c=row.insertCell(0);
+      c.innerHTML="Arrayvalue";
+  }
 }
  </script>  
 </head>
