--- a/hw4.htm
+++ b/hw4.htm
@@ -44,7 +44,7 @@ function mybmi1() {
   var hei = document.getElementById("height").value;
   var wei = document.getElementById("weight").value;
   var bmiresult= wei/(hei*hei);
- document.getElementById("mybmi").value=bmiresult;
+ document.getElementById("mybmi").value=bmiresult(2);
 }
  </script>  
 <script>
