--- a/hw4.htm
+++ b/hw4.htm
@@ -115,7 +115,15 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
-                   <table id="myTable"></table>
+                   <table id="myTable" table width="100" border="1">
+                   <td>隔離預防結果:</td>
+                 　<td></td>
+                   <td></td>
+                 　<td></td>
+                   <td></td>
+                 　<td></td>
+                   </table>
+                
 <br>
 <br>
 <font size="4"><b>計算BMI:</b></font><br>
