--- a/hw4.htm
+++ b/hw4.htm
@@ -50,9 +50,10 @@ function mybmi1() {
 <script>
  var color=["Red","Green","Blue","Yellow","Black","Gray"];
 function mytable() {
-var table=document.getElementsById("prevent");
+
   for(i=0;i<table.length;i++)
   {
+    var table[i]=document.getElementsById("prevent");
       if(table[i].checked)
       {
         document.getElementsById(myTable.row[i])=table(i);
