--- a/hw4.htm
+++ b/hw4.htm
@@ -118,11 +118,9 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 </select>
                    <table id="myTable" table width="100" border="1">
                    <td>隔離預防結果:</td>
-                 　<td></td>
-                   <td></td>
-                 　<td></td>
-                   <td></td>
-                 　<td></td>
+                 　<td width="33%"></td>
+                   <td width="33%"></td>
+                 　<td width="33%"></td>
                    </table>
                 
 <br>
