--- a/hw4.htm
+++ b/hw4.htm
@@ -116,11 +116,11 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
-                   <table id="myTable" table width="100" border="1">
+                   <table id="myTable"  border="1">
                    <td>隔離預防結果:</td>
-                 　<td width="33%"></td>
-                   <td width="33%"></td>
-                 　<td width="33%"></td>
+                 　<td width="50%"></td>
+                   <td width="50%"></td>
+                 　<td width="50%"></td>
                    </table>
                 
 <br>
