--- a/hw4.htm
+++ b/hw4.htm
@@ -50,8 +50,8 @@ function mybmi1() {
 <script>
  var color=["Red","Green","Blue","Yellow","Black","Gray"];
 function mytable() {
-	 var t = document.getElementById("myTable");
-	 var obj = document.getElementsByName("prevent1");
+	 var t = document.getElementsById("myTable");
+	 var obj = document.getElementByName("prevent1");
     var check_val[];
     for(i=0;i<obj.length;i++){
         if(obj[i].checked){
