--- a/hw4.htm
+++ b/hw4.htm
@@ -56,7 +56,7 @@ function mytable() {
     for(i=0;i<obj.length;i++){
         if(obj[i].checked){
 		
-             t.rows[i].innerText=obj[i].value;}
+             myTable.innerText=obj[i].value;}
     }
 }
  </script>  
