--- a/hw4.htm
+++ b/hw4.htm
@@ -51,7 +51,7 @@ function mybmi1() {
 
 function mytable() {
 
-	var t = document.getElementsById("myTable");
+	var t = document.getElementById("myTable");
 	 var obj1= document.getElementByName("prevent1").value;
 	 var obj2=document.getElementByName("prevent2").value;
 	 var obj3=document.getElementByName("prevent3").value;
