--- a/hw4.htm
+++ b/hw4.htm
@@ -119,7 +119,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="張四">張四</option>
 </select>
                    <table id="myTable"  border="1">
-                   <td>隔離預防結果:</td>
+                   <th>隔離預防結果:</th>
                  　<td width="100"></td>
                    <td width="100"></td>
                  　<td width="100"></td>
