--- a/hw4.htm
+++ b/hw4.htm
@@ -52,10 +52,10 @@ function mybmi1() {
 function mytable() {
 
 	var t = document.getElementById("myTable");
-	 var obj1= document.getElementByName("prevent1").value;
-	 var obj2=document.getElementByName("prevent2").value;
-	 var obj3=document.getElementByName("prevent3").value;
-	 var obj4=document.getElementByName("prevent4").value;
+	 var obj1= document.getElementById("prevent1").value;
+	 var obj2=document.getElementById("prevent2").value;
+	 var obj3=document.getElementById("prevent3").value;
+	 var obj4=document.getElementById("prevent4").value;
     
 	 var color=["obj1","obj2","obj3","obj4"];
     for(i=0;i<obj.length;i++){
