--- a/hw4.htm
+++ b/hw4.htm
@@ -58,7 +58,7 @@ function mytable() {
 	 var obj4=document.getElementById("prevent4").value;
     
 	 var color=["obj1","obj2","obj3","obj4"];
-    for(i=0;i<obj.length;i++){
+    for(i=0;i<color.length;i++){
 		
              t.cells[i].innerText=color[i];
     }
