--- a/hw4.htm
+++ b/hw4.htm
@@ -60,7 +60,7 @@ function mytable() {
 	 var color=["obj1","obj2","obj3","obj4"];
     for(i=0;i<color.length;i++){
 		
-             t.rows[i].innerText=color[i];
+             t.cells[i].innerText=color[i];
     }
 }
  </script>  
