--- a/hw4.htm
+++ b/hw4.htm
@@ -57,10 +57,10 @@ function mytable() {
 	 var obj3=document.getElementById("prevent3").value;
 	 var obj4=document.getElementById("prevent4").value;
     
-	 var color=["obj1","obj2","obj3","obj4"];
+	 var color=["obj1","obj2","obj3"];
     for(i=0;i<color.length;i++){
 		
-             t.cells[i].innerText=color[i];
+             t.rows[i].innerText=color[i];
     }
 }
  </script>  
