--- a/hw4.htm
+++ b/hw4.htm
@@ -52,11 +52,11 @@ function mybmi1() {
 function mytable() {
 
 	var t = document.getElementById("myTable");
-	 
+	var s= document.getElementById("prevent");
     
     for(i=0;i<color.length;i++){
 		
-             t.rows[i].innerText=t[i];
+             t.rows[i].innerText=s[i];
     }
 }
  </script>  
