--- a/hw4.htm
+++ b/hw4.htm
@@ -54,7 +54,7 @@ function mytable() {
 	var t = document.getElementById("myTable");
 	var s= document.getElementById("prevent");
     
-    for(i=0;i<color.length;i++){
+    for(i=0;i<3;i++){
 		
              t.rows[i].innerText=s[i];
     }
