--- a/hw4.htm
+++ b/hw4.htm
@@ -52,7 +52,7 @@ function mybmi1() {
 function mytable() {
 
 	var t = document.getElementById("myTable");
-	var s= document.getElementById("prevent");
+	var s= document.getElementByName("prevent");
     
     for(i=0;i<3;i++){
 		
