--- a/hw4.htm
+++ b/hw4.htm
@@ -51,18 +51,12 @@ function mybmi1() {
 
 function mytable() {
 
-	
+	var t = document.getElementById("myTable");
+	var s= document.getElementBy("prevent");
     
     for(i=0;i<3;i++){
-		var t = document.getElementById("myTable");
-	var s= document.getElementByName("prevent" + (i+1).toString());
-	    if(s.checked){
-             var row = t.insertRow(-1);
-             var cell1=row.insertCell(0);
-             var cell2=row.insertcell(1);
-		    cell1.innerHTML = s.id;
-		    cell2.innerHTML = s.value;
-	    }
+		
+             t.rows[i].innerText=s[i];
     }
 }
  </script>  
@@ -105,10 +99,10 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 病歷:<br>
 <textarea name="病例"; style="width:250px;height:70px;"></textarea><br>
   隔離預防:
-  <input type="checkbox" id=prevent name="pre" value="none"> 無
-  <input type="checkbox" id=prevent name="pre" value="air"> 空氣傳染
-  <input type="checkbox" id=prevent name="pre" value="contact"> 接觸傳染
-  <input type="checkbox" id=prevent name="pre" value="droplet"> 飛沫傳染<br>
+  <input type="checkbox" id=prevent1 name="prevent" value="none"> 無
+  <input type="checkbox" id=prevent2 name="prevent" value="air"> 空氣傳染
+  <input type="checkbox" id=prevent3 name="prevent" value="contact"> 接觸傳染
+  <input type="checkbox" id=prevent4 name="prevent" value="droplet"> 飛沫傳染<br>
   是否看過一般神經科:
 <input type="radio" name="是否看過一般神經科" value="yes"> 是
 <input type="radio" name="是否看過一般神經科" value="no"> 否
