--- a/hw4.htm
+++ b/hw4.htm
@@ -51,12 +51,18 @@ function mybmi1() {
 
 function mytable() {
 
-	var t = document.getElementById("myTable");
-	var s= document.getElementById("prevent");
-    
+	
     for(i=0;i<3;i++){
-		
-             t.rows[i].innerText=s[i];
+        var t = document.getElementById("myTable");
+	var s= document.getElementById("prevent" + (i + 1).toString());
+	    if(s.checked)
+	    {
+             var row = t.insertRow(-1);
+             var cell1=row.insertCell(0);  
+             var cell2=row.insertCell(1);
+             cell1.innerHTML=s.id; 
+             cell2.innerHTML=s.value;
+	    }
     }
 }
  </script>  
