--- a/hw4.htm
+++ b/hw4.htm
@@ -52,7 +52,7 @@ function mybmi1() {
 function mytable() {
 
 	 
-    for(i=0;i<3;i++){
+    for(i=0;i<2;i++){
             var t = document.getElementById("myTable");
 	    var s= document.getElementById("prevent" + (i + 1).toString());
 	    if(s.checked)
@@ -120,7 +120,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
-                   <table id="myTable" border="1">
+                   <table id="myTable">
                    <td></td>
 	           <td></td>
                    <td></td>
