--- a/hw4.htm
+++ b/hw4.htm
@@ -107,10 +107,10 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 病歷:<br>
 <textarea style="width:250px;height:70px;"></textarea><br>
   隔離預防:
-  <input type="checkbox" id=prevent1 name="prevent" value="none"> 無
-  <input type="checkbox" id=prevent2 name="prevent" value="air"> 空氣傳染
-  <input type="checkbox" id=prevent3 name="prevent" value="contact"> 接觸傳染
-  <input type="checkbox" id=prevent4 name="prevent" value="droplet"> 飛沫傳染<br>
+  <input type="checkbox" id=prevent name="prevent" value="none"> 無
+  <input type="checkbox" id=prevent name="prevent" value="air"> 空氣傳染
+  <input type="checkbox" id=prevent name="prevent" value="contact"> 接觸傳染
+  <input type="checkbox" id=prevent name="prevent" value="droplet"> 飛沫傳染<br>
   是否看過一般神經科:
 <input type="radio" name="是否看過一般神經科" value="yes"> 是
 <input type="radio" name="是否看過一般神經科" value="no"> 否
