--- a/hw4.htm
+++ b/hw4.htm
@@ -122,7 +122,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="王九">王九</option>
 　<option value="張四">張四</option>
 </select>
-                   <table id="myTable" border="1">
+                   <table id="myTable" border-collapse : collapse>
                    <td></td>
 	           <td></td>
                    </table>
