--- a/hw4.htm
+++ b/hw4.htm
@@ -122,8 +122,8 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 　<option value="張四">張四</option>
 </select>
                    <table id="myTable" border="1" sytle=" border-collapse:collapse">
-                   <td></td>
-	           <td></td>
+                   <td>/</td>
+	           <td>隔離預防結果</td>
                    </table>
                 
 <br>
