--- a/hw4.htm
+++ b/hw4.htm
@@ -42,6 +42,7 @@ function myFunction1() {
 <script>
 function mybmi1() {
   var hei = document.getElementById("height").value;
+	hei=hei/100;
   var wei = document.getElementById("weight").value;
   var bmiresult= wei/(hei*hei);
       bmiresult = bmiresult.toFixed(2); 
