--- a/hw4.htm
+++ b/hw4.htm
@@ -130,7 +130,7 @@ background-image:url('https://truth.bahamut.com.tw/s01/201803/57abad8e8b2465f260
 <br>
 <br>
 <font size="4"><b>計算BMI:</b></font><br>
-身高: <input type="text" id="height" name="身高" value="">單位:公分(m)<br>
+身高: <input type="text" id="height" name="身高" value="">單位:公分(cm)<br>
 體重: <input type="text" id="weight" name="體重" value="">單位:公斤(kg)<br> 
 結果: <input type="text" id="mybmi" name="結果" value=""><br><br>
 <button onclick="checkForm()" type="button">檢查資料</button>
